welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: ';' expected but '=' found.
varx:int=0
        ^